# kikan

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  monitor.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  tox.ini
examples/: arrow.py  snake.py
misc/: splash.py
src/kikan/: __init__.py  engine.py  entity.py  errors.py  events.py  events_new.py  main.py  math.py  maths.py  physics.py  screen.py  signals.py  states.py  utils.py  world.py
src/kikan/events/: __init__.py  events.py  input.py
src/kikan/events_new/: __init__.py  base.py
tests/: example.py  gem.py  screen.py  test.py  zombie.py
